Increased redirect post texts to avoid error with lsi
Signed-off-by: George Araújo <george.gcac@gmail.com>

--- a/_i18n/en/_posts/2022-02-01-redirect.md
+++ b/_i18n/en/_posts/2022-02-01-redirect.md
@@ -6,4 +6,4 @@ description: you can also redirect to assets like pdf
 redirect: /assets/pdf/example_pdf.pdf
 ---
 
-Redirecting to another page.
+Redirecting to another page or file. Note that pages without any text, with very short texts or formed only by words without much meaning can cause problems for the [generation of related posts](https://github.com/jekyll/classifier-reborn/issues/64#issuecomment-221651255).
