--- a/_i18n/pt-br/_posts/2022-02-01-redirect.md
+++ b/_i18n/pt-br/_posts/2022-02-01-redirect.md
@@ -6,4 +6,4 @@ description: you can also redirect to assets like pdf
 redirect: /assets/pdf/example_pdf.pdf
 ---
 
-Redirecionando para outra página.
+Redirecionando para outra página ou arquivo. Note que páginas sem textos, com textos muito curtos ou formados somente por palavras sem muito significado podem gerar problemas para a [geração de posts relacionados](https://github.com/jekyll/classifier-reborn/issues/64#issuecomment-221651255).
